# meteos

./: README.md
backend/: .clang-format  .dockerignore  .gitattributes  .gitignore  readme.md
backend/docker/: Dockerfile  Dockerfile-tools
backend/include/: readme.md
backend/scripts/: build.sh  run.sh  start.sh  test.sh
backend/src/: env-db.cpp  env-db.h  env-rest.cpp  env-rest.h  main.cpp
backend/test/: env-rest-test.cpp
docs/: environment-standards.md
docs/architecture/: meteos-architecture.odg  readme.md
docs/gotchas/: web-bluetooth.md
docs/sensor/: readme.md
frontend/: .dockerignore  .eslintrc  .gitignore  package-lock.json  package.json  readme.md  stylelint.config.js  webpack.config.js
frontend/.devcontainer/: devcontainer.json
frontend/docker/: Dockerfile
frontend/scripts/: build.sh  run-backend-mock.sh  run.sh
notifications/: .dockerignore  .env  Cargo.toml  config.toml  readme.md
notifications/.devcontainer/: Dockerfile  devcontainer.json
notifications/docker/: Dockerfile
notifications/docker/scripts/: build.sh  push.sh  release.sh  run.sh  start.sh
notifications/scripts/: build.sh  run.sh
notifications/src/: backend_api.rs  check.rs  config.rs  env_check.rs  main.rs  monitor.rs  notification.rs  notifier.rs  reading.rs  sample.rs  subs.rs  subscriptions.rs  tg_bot.rs  utils.rs
sensor/: .gitattributes  .gitignore  main.ino  readme.md  sensor.ino
sensor/src/: button.cpp  button.h  config.cpp  config.h  display.cpp  display.h  radio-bt.cpp  radio-bt.h  radio-wifi.cpp  radio-wifi.h  sample.h  sensors.cpp  sensors.h  sleep.h  (+5 more)
(+76 files in other folders)
