[package]
name = "meteos-notifications"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
log = { version = "0.4", features = ["serde"] }
simple_logger = "2.1.0"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
chrono = "0.4.19"
toml = "0.5.9"
rustbreak = { version = "2.0.0", features = ["ron_enc"] }
anyhow = "1.0.57"
thiserror = "1.0.31"
